# PLN-core

./: .gitignore  install.sh  pyproject.toml  readme.md  streamlit_app.py
ZIP-pln-core-entrega/: instrucoes.txt  main.py  pyproject.toml
ZIP-pln-core-entrega/.streamlit/: config.toml
ZIP-pln-core-entrega/data/: recommendations.json
ZIP-pln-core-entrega/src/pln_core/: __init__.py  lexicon.py  pipeline.py  text_utils.py  tokenizers.py
data/: recommendations.json
docs/: methodology.md  pipeline-processes.md
docs/possible-dictionaries/: emotion-dictionary.txt
docs/processes/: 00_index.md  01_lexicon_sources.md  02_seed_lexicon_design.md  03_normalization.md  04_tokenization.md  05_lexicon_matching.md  06_match_records.md  07_score_calculation.md  08_label_assignment.md  09_research_and_sources.md  10_song_recommendation.md
docs/processes/rules/: 01_negation.md  02_intensifiers.md  03_diminishers.md  04_contrast.md  05_exclamation.md
report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
run/pipeline/analysis/: run_cli.py
src/pln_core/: __main__.py  cli.py  lexicon.py  pipeline.py  recommender.py  samples.py  text_utils.py  tokenizers.py
src/pln_core/data/: seed_lexicon.json
tests/: test_cli.py  test_lexicon.py  test_pipeline.py  test_recommender.py
